<resources>
    <string name="app_name">AstroWeather</string>

    <string name="action_settings">Settings</string>

    <string name="coordinates_setting">Coordinates</string>
    <string name="settings_location">Location</string>
    <string name="settings_latitude">Latitude</string>
    <string name="settings_longitude">Longitude</string>
    <string name="settings_refresh_time">Refresh interval</string>
    <string name="settings_units">Select units</string>
    <string name="latitude_pref_summary">Chose your latitude</string>
    <string name="longitude_pref_summary">Chose your longitude</string>
    <string name="long_textField">longitude: %s</string>
    <string name="lat_textField">latitude: %s</string>
    <string name="add_city_menu">Add location</string>
    <string name="refresh_pref_summary">Chose time for refreshing data</string>


    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="azimuth_rise">azimuth rise</string>
    <string name="azimuth_set">azimuth set</string>
    <string name="twilight_morning">twilight morning</string>
    <string name="twilight_evening">twilight evening</string>
    <string name="moon_rise">moonrise</string>
    <string name="moon_set">moonset</string>
    <string name="new_moon">new moon</string>
    <string name="full_moon">full moon</string>
    <string name="moon_phase">moon phase</string>
    <string name="synodic_day">synodic day</string>
    <string name="dusk">dusk</string>

    <string-array name="sun_items">
        <item>@string/sunrise</item>
        <item>@string/sunset</item>
        <item>@string/azimuth_rise</item>
        <item>@string/azimuth_set</item>
        <item>@string/twilight_morning</item>
        <item>@string/twilight_evening</item>
    </string-array>

    <string-array name="moon_items">
        <item>@string/moon_rise</item>
        <item>@string/moon_set</item>
        <item>@string/full_moon</item>
        <item>@string/new_moon</item>
        <item>@string/moon_phase</item>
        <item>@string/synodic_day</item>
    </string-array>

    <string-array name="units">
        <item>f</item>
        <item>c</item>
    </string-array>

    <string-array name="refresh_time_entries">
        <item>10s</item>
        <item>1min</item>
        <item>3min</item>
        <item>5min</item>
        <item>10min</item>
        <item>30min</item>
    </string-array>

    <string-array name="refresh_time_values">
        <item>10</item>
        <item>60</item>
        <item>180</item>
        <item>300</item>
        <item>600</item>
        <item>1800</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
