<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/units"
        android:entryValues="@array/units"
        android:key="unitSetting"
        android:title="@string/settings_units" />

    <ListPreference
        android:defaultValue="60"
        android:entries="@array/refresh_time_entries"
        android:entryValues="@array/refresh_time_values"
        android:key="refreshTimeSetting"
        android:summary="@string/refresh_pref_summary"
        android:title="@string/settings_refresh_time" />


    <PreferenceCategory android:title="@string/coordinates_setting">

        <EditTextPreference
            android:defaultValue="0"
            android:inputType="numberDecimal"
            android:key="longitudeSetting"
            android:summary="@string/longitude_pref_summary"
            android:title="@string/settings_longitude" />

        <EditTextPreference
            android:defaultValue="0"
            android:inputType="numberDecimal"
            android:key="latitudeSetting"
            android:summary="@string/latitude_pref_summary"
            android:title="@string/settings_latitude" />
    </PreferenceCategory>

</PreferenceScreen>